# circe-schema

./: .gitignore  README.md
docs/: Cohort-Definition-Spec,md  extensions.md
fixtures/: minimal-cohort.json  multi-criteria-cohort.json  with-censoring.json  with-custom-era.json  with-inclusion-rules.json  with-windowed-criteria.json
java/: pom.xml
java/src/main/java/org/ohdsi/circe/cohortdefinition/: CohortExpression.java  CollapseSettings.java  CollapseType.java  ConceptSetSelection.java  ConditionEra.java  ConditionOccurrence.java  CorelatedCriteria.java  Criteria.java  CriteriaGroup.java  CriteriaRegistry.java  CustomEraStrategy.java  DateAdjustment.java  DateOffsetStrategy.java  DateRange.java  Death.java  DemographicCriteria.java  DeviceExposure.java  DoseEra.java  DrugEra.java  DrugExposure.java  EndStrategy.java  FixtureLoader.java  InclusionRule.java  LocationRegion.java  Measurement.java  NumericRange.java  Observation.java  (+14 more)
python/: pyproject.toml
python/src/circe_schema/: __init__.py  base.py  core.py  criteria.py  criteria_registry.py  end_strategy.py  expression.py  groups.py  vocabulary.py
python/tests/: conftest.py  test_conformance.py
spec/: cohort-expression.schema.json  common.schema.json  groups.schema.json  strategies.schema.json  vocabulary.schema.json
spec/criteria/: base.schema.json  condition.schema.json  death.schema.json  device.schema.json  drug.schema.json  location-region.schema.json  measurement.schema.json  observation.schema.json  payer-plan-period.schema.json  procedure.schema.json  specimen.schema.json  visit.schema.json
(+13 files in other folders)
